# Python_Package_PyPi

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
experiments/: experiments.ipynb
src/mongodb_connect/: mongo_crud.py
