[metadata]
license = MIT
license_file = license
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent


[option]
install_requires =
    ensure == 1.0.2
    python_requires = >=3.7

[option.extras_requires]
testing=
    pytest >=7.1.3
    mypy >=0.971
    flake8 >= 5.0.4
    tox >= 3.35.1
    black >=22.8.0

[option.package_data]
mongoDBconnector_test=py.typed

[flake8]
max-line-lenght = 160
exclude = __init__.py