[metadata]
license = MIT
license_file = license
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent


[option]
install_requires =
    ensure == 1.0.2
    python_requires = >=3.7

[option.extras_requires]
testing=
    pytest >=8.3.4
    mypy >=1.13.0
    flake8 >= 7.1.1
    tox >= 4.23.2
    black >=22.6.0


[option.package_data]
mongoDBconnector_test=py.typed

[flake8]
max-line-lenght = 160
exclude = __init__.py